Fixed misalignement of article age and the preview button.

--- a/style.css
+++ b/style.css
@@ -291,6 +291,11 @@ ul#articles li:last-child {
     color: var(--color-main-text);
 }
 
+.button-set {
+    min-width: fit-content;
+    margin-left: 1em;
+}
+
 .button {
     width: 1.25rem;
     height: 1.25rem;
@@ -340,20 +345,14 @@ ul#articles li:last-child {
 .site-info {
     display: flex;
     align-items: center;
+    margin-top: 0.2em;
 }
 
 .site-icon {
     margin-right: 0.5em;
 }
 
-.site-link {
-    font-weight: normal;
-    font-size: 1.1em;
-    color: var(--color-main-text);
-    text-decoration: none;
-    margin: 0;
-}
-.article-age {
+.article-teaser, .site-link {
     font-weight: normal;
     font-size: 1.1em;
     color: var(--color-main-text);
